Fixed form alignment

--- a/webroot/css/card.css
+++ b/webroot/css/card.css
@@ -8,6 +8,13 @@
   background-color: #ffffff;
 }
 
+.wrapper {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: calc(39px / 2);
+}
+
 .icons-container,
 .card,
 .birthday {
@@ -29,7 +36,7 @@ button {
 .edit:hover,
 .delete:hover {
   transform: scale(1.1);
-  transition: all ease-in .2s;
+  transition: all ease-in 0.2s;
 }
 
 .icons-container {
@@ -59,7 +66,7 @@ button {
 .card:hover,
 .birthday,
 .birthday:hover {
-  transition: all ease-in .2s;
+  transition: all ease-in 0.2s;
 }
 
 .rounded-circle:hover {
@@ -68,7 +75,7 @@ button {
 
 .rounded-circle,
 .rounded-circle:hover {
-  transition: all ease-in .2s;
+  transition: all ease-in 0.2s;
 }
 
 .birthday {
@@ -117,6 +124,10 @@ button {
   .card {
     padding-left: calc(43px / 2);
     padding-right: calc(23px / 2);
+  }
+
+  .wrapper {
+    gap: 39px;
   }
 }
 
