--- a/webroot/css/default.css
+++ b/webroot/css/default.css
@@ -70,7 +70,7 @@ button {
 .table,
 .form-container,
 h1 {
-  max-width: 900px;
+  max-width: 779px;
   margin: auto;
 }
 
